# PoissonSolver

./: .gitignore  CMakeLists.txt  README.md
include/: IO.hpp  consolemenu.hpp  consolewriter.hpp  diffusionsolver.hpp  diffusionsolver3d.hpp  grid.hpp  grid3d.hpp  poissonsolver.hpp  run_solver.hpp
src/: IO.cpp  PoissonSolver.cpp  consolemenu.cpp  consolewriter.cpp  diffusionsolver.cpp  diffusionsolver3d.cpp  grid.cpp  grid3d.cpp  main.cpp  main.cpp.save  poissonsolver.cpp  run_solver.cpp
